--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,82 @@
-/venv
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# pyenv
+.python-version
+
+# dotenv
+.env.local
+.env.*.local
+.envrc
+
+# Editor settings
+.vscode/
+.idea/
+*.sublime-workspace
+
+# Local azure settings
+local.settings.json
+
+# Logs and output files
+*.log
+logs/
+*.out
+*.pid
+*.gz
+*.log.*
+
+# Azure Function artifacts
+.azure/
+funcignore
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+*.swp
