--- a/.github/workflows/8-40-semantic-search-and-vector-database-integration_semantic-search-ai.yml
+++ b/.github/workflows/8-40-semantic-search-and-vector-database-integration_semantic-search-ai.yml
@@ -11,8 +11,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "." # Set to the path to your web app project, defaults to the repository root
-  PYTHON_VERSION: "3.11" # Set to the Python version to use (supports 3.6, 3.7, 3.8, 3.9, 3.10, 3.11)
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  PYTHON_VERSION: '3.11' # set this to the python version to use (supports 3.6, 3.7, 3.8)
 
 jobs:
   build:
@@ -35,8 +35,6 @@ jobs:
         run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here
-      # - name: Run tests
-      #   run: pytest tests/
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
@@ -53,7 +51,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Production"
+      name: 'Production'
       url: ${{ steps.deploy-to-function.outputs.webapp-url }}
 
     steps:
@@ -65,12 +63,13 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      - name: "Deploy to Azure Functions using Remote Build"
+      - name: 'Deploy to Azure Functions'
         uses: Azure/functions-action@v1
         id: deploy-to-function
         with:
-          app-name: "semantic-search-ai"
-          slot-name: "Production"
+          app-name: 'semantic-search-ai'
+          slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_7ADBC2B8E51240278F06095CC8B498BC }}
-          remote-build: true # Enable remote build instead of using ZIP deployment
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2FFF61E968594768BCFF03C429D0B6BD }}
+          scm-do-build-during-deployment: true
+          enable-oryx-build: true
