--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 azure-functions
 azure-cosmos
-sentence-transformers==3.2.0
-scipy==1.14.1
-numpy==2.1.2
+sentence-transformers==2.2.2
+scipy==1.11.3
+numpy==1.26.2
 pytest
-torch==2.0.1+cpu     # CPU-only version of PyTorch
+torch==2.4.1
 -f https://download.pytorch.org/whl/cpu.html  # Force CPU-only installation
