--- a/.github/workflows/8-40-semantic-search-and-vector-database-integration_semantic-search-ai.yml
+++ b/.github/workflows/8-40-semantic-search-and-vector-database-integration_semantic-search-ai.yml
@@ -35,7 +35,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest /tests
+        run: pytest tests/
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
