--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ sentence-transformers==2.2.2
 scipy==1.11.3
 numpy==1.26.2
 pytest
+pdf2docx==0.5.6
 torch==2.4.1
 -f https://download.pytorch.org/whl/cpu.html  # Force CPU-only installation
