--- a/.github/workflows/master_semantic-search-ai.yml
+++ b/.github/workflows/master_semantic-search-ai.yml
@@ -51,11 +51,6 @@ jobs:
           path: release.zip
           retention-days: 1
 
-      - name: List artifacts
-        run: |
-          echo "Listing artifacts in the current directory:"
-          ls -R
-
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -65,16 +60,6 @@ jobs:
         with:
           name: python-app
           path: .
-
-      - name: Check for artifact
-        run: |
-          if [ ! -f release.zip ]; then
-            echo "Error: release.zip not found. Artifact download may have failed."
-            exit 1
-          else
-            echo "release.zip found. Proceeding with deployment."
-            ls -l release.zip
-          fi
 
       - name: Unzip artifact for deployment
         run: |
@@ -86,10 +71,6 @@ jobs:
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: "Check for existing deployments"
-        run: |
-          az functionapp deployment list --name semantic-search-ai --resource-group DocuChat --query "[?status=='InProgress'].{id:id}" --output tsv | xargs -I {} az functionapp deployment delete --name semantic-search-ai --resource-group DocuChat --id {}
 
       - name: "Deploy to Azure Functions"
         uses: Azure/functions-action@v1
@@ -107,17 +88,21 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az functionapp config appsettings set --name semantic-search-ai --resource-group <your-resource-group-name> --settings WEBSITE_RUN_FROM_PACKAGE=1 FUNCTIONS_WORKER_PROCESS_COUNT=1 PYTHON_ENABLE_WORKER_EXTENSIONS=1
-
-      - name: Azure logout
-        run: |
-          az logout
-        if: always()
+            az functionapp config appsettings set --name semantic-search-ai --resource-group DocuChat --settings WEBSITE_RUN_FROM_PACKAGE=1 FUNCTIONS_WORKER_PROCESS_COUNT=1 PYTHON_ENABLE_WORKER_EXTENSIONS=1
 
       - name: "Handle Deployment Failure"
         if: failure()
         run: |
           echo "Deployment failed. Checking logs..."
-          az functionapp log tail --name semantic-search-ai --resource-group DocuChat
+          az functionapp log show --name semantic-search-ai --resource-group DocuChat --lines 100
           echo "Attempting to restart the Function App..."
           az functionapp restart --name semantic-search-ai --resource-group DocuChat
+          echo "Waiting for 30 seconds after restart..."
+          sleep 30
+          echo "Attempting deployment again..."
+          az functionapp deployment source config-zip -g DocuChat -n semantic-search-ai --src function_app.zip
+
+      - name: Azure logout
+        run: |
+          az logout
+        if: always()
