--- a/.github/workflows/master_semantic-search-ai.yml
+++ b/.github/workflows/master_semantic-search-ai.yml
@@ -52,7 +52,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "Production"
+      name: "stagging"
       url: ${{ steps.deploy-to-function.outputs.webapp-url }}
 
     steps:
