--- a/.github/workflows/master_semantic-search-ai.yml
+++ b/.github/workflows/master_semantic-search-ai.yml
@@ -1,7 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure Functions: https://aka.ms/python-webapps-actions
-
 name: Build and deploy Python project to Azure Function App - semantic-search-ai
 
 on:
@@ -52,7 +48,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: "stagging"
+      name: "staging"
       url: ${{ steps.deploy-to-function.outputs.webapp-url }}
 
     steps:
@@ -69,8 +65,18 @@ jobs:
         id: deploy-to-function
         with:
           app-name: "semantic-search-ai"
-          slot-name: "stagging"
+          slot-name: "staging"
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C2E04134078E4CE691235BE85678ECC1 }}
           scm-do-build-during-deployment: true
           enable-oryx-build: true
+
+      - name: "Handle Deployment Failure"
+        if: failure()
+        run: |
+          echo "Deployment failed. Checking logs..."
+          az functionapp log show --name semantic-search-ai --resource-group DocuChat --slot staging --lines 100
+          echo "Attempting to restart the Function App..."
+          az functionapp restart --name semantic-search-ai --resource-group DocuChat --slot staging
+          echo "Waiting for 30 seconds after restart..."
+          sleep 30
