--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,6 @@ pytest==8.3.3
 scikit_learn==1.3.0
 scipy==1.14.1
 sentence_transformers==2.2.2
+huggingface_hub==0.11.1
 torch==2.4.1
 -f https://download.pytorch.org/whl/cpu.html
