--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ pydantic==2.9.2
 pytest==8.3.3
 scikit_learn==1.3.0
 scipy==1.14.1
-sentence_transformers==2.2.2
+sentence_transformers
 torch==2.4.1
 -f https://download.pytorch.org/whl/cpu.html
